--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_KEY=your_api_key
-REACT_APP_BASE_URL=https://api.example.com
+AUTH0_DOMAIN=dev-4rz3358vwhzrril7.us.auth0.com
+AUTH0_CLIENT_ID=rtxrPAZMmzEiNQdA6q47Q84mQIwbS24j
